--- a/dsouza_re_analysis/01_r_docs/reanalysis_dsouza_inferential.Rmd
+++ b/dsouza_re_analysis/01_r_docs/reanalysis_dsouza_inferential.Rmd
@@ -19,7 +19,7 @@ D'Souza et al. (2020) references:
 - OSF: https://osf.io/53gh2/
 - Dryad: 10.5061/dryad.3n5tb2rc6 
 
-Doubts and suggestions: dalbenwork@gmail.com
+Feedback and suggestions: dalbenwork@gmail.com
 
 # Load library
 
